# dexbooru-ml

./: .gitignore  Dockerfile  Dockerfile.celery  LICENSE  README.md  docker-compose-weaviate.yml  pyproject.toml  run.py
dexbooruml/: main.py  server.py
dexbooruml/config/: celery_config.py  model_config.py  nlp_config.py  weaviate_config.py
dexbooruml/routers/: general.py  posts.py  tags.py
dexbooruml/tasks/: posts.py
dexbooruml/utilities/: __init__.py  files.py  tags.py  vectordb.py
training/: tag_classfier_preprocess.py  tag_classifier_model.py
