[tool.poetry]
name = "dexbooruml"
version = "0.1.0"
description = "A machine learning API for web services in Dexbooru"
authors = ["Tanish Shah <connecttanish@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
spacy = "^3.8.2"
fastapi = {extras = ["standard"], version = "^0.115.2"}
numpy = "^2.0.1"
thinc = "^8.3.1"
scikit-learn = "^1.5.2"

[tool.poetry.group.dev.dependencies]
tqdm = "^4.66.5"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"